force-app/main/default/objects/Order/fields/Auto_Post_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Auto_Post_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Post Invoice</label>
    <type>Checkbox</type>
</CustomField>