force-app/main/default/objects/Order/fields/AutoActivateContract__c.field-meta.xml
<CustomField>
    <fullName>AutoActivateContract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, the contract activated upon creation</description>
    <inlineHelpText>Use for demo purposes only</inlineHelpText>
    <label>Auto-Activate Contract</label>
    <type>Checkbox</type>
</CustomField>