force-app/main/default/objects/Order/fields/AutoPostInvoice__c.field-meta.xml
<CustomField>
    <fullName>AutoPostInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, all new invoices are posted upon creation (both with Bill Now and Invoice Scheduler).</description>
    <inlineHelpText>Use for demo purposes only.</inlineHelpText>
    <label>Auto-Post Invoice</label>
    <type>Checkbox</type>
</CustomField>