force-app/main/default/objects/Order/fields/EarliestNextBillingDate__c.field-meta.xml
<CustomField>
    <fullName>EarliestNextBillingDate__c</fullName>
    <label>Earliest Next Billing Date</label>
    <summarizedField>OrderItem.blng__NextBillingDate__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.blng__NextBillingDate__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.blng__HoldBilling__c</field>
        <operation>equals</operation>
        <value>No</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>