force-app/main/default/objects/Order/fields/HasUsageProducts__c.field-meta.xml
<CustomField>
    <fullName>HasUsageProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to True IF an Order Product&apos;s (ChargeType = Recurring AND HasConsumptionSchedule) OR (ChargeType = Usage)</description>
    <label>Has Usage Products</label>
    <type>Checkbox</type>
</CustomField>