force-app/main/default/objects/Order/fields/OverrideEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>OverrideEffectiveDate__c</fullName>
    <description>Used for testing or to force invoicing in the future.</description>
    <inlineHelpText>Simulates a different date other than today.</inlineHelpText>
    <label>Override Effective Date</label>
    <type>Date</type>
</CustomField>