force-app/main/default/objects/Order/fields/StatusOrder__c.field-meta.xml
<CustomField>
    <fullName>StatusOrder__c</fullName>
    <formula>HYPERLINK(&apos;/flow/RevenueCloud_Order_TriggerAction?Id=&apos; &amp; Id  &amp; &apos;&amp;ActionType=Status&apos; &amp; &apos;&amp;retURL=&apos; &amp; Id,

CASE( Status ,
&quot;Draft&quot;, IMAGE(&quot;https://i.ibb.co/vqQsJv5/btn-draft.png&quot;,&quot;Draft&quot;,20,60),
&quot;Activated&quot;, IMAGE(&quot;https://i.ibb.co/Gp72bMG/btn-activated.png&quot;, &quot;Activated&quot;,20,60),
&quot;&quot;
)

, &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status (Order)</label>
    <type>Text</type>
</CustomField>